7383. Fix on popupmenu more icon not visible when open

--- a/src/components/toolbar/_toolbar.scss
+++ b/src/components/toolbar/_toolbar.scss
@@ -144,6 +144,10 @@ $toolbar-buttonset-height: 40px;
     > * {
       margin-right: 1px;
     }
+
+    .btn-actions.is-open .icon {
+      color: $button-color-tertiary-initial-font;
+    }
   }
 
   &.do-resize {
